# CubicTraver

./: CMakeLists.txt  README.md  glad.c  main.cpp
assets/shaders/: fragmentCursor.shader  fragmentPyramid.shader  fragmentTransparentCube.shader  vertexCube.shader  vertexCursor.shader  vertexPyramid.shader  vertexTransparentCube.shader
include/: functions.hpp  gl_headers.hpp  user_headers.hpp
include/DATA/: globals.hpp  paths.hpp  vertices.hpp
include/FUNCS/: cube_logic.hpp  cursor_pos_callback.hpp  draw_functions.hpp  frame_size_callback.hpp  key_button_callback.hpp  key_callback.hpp  mouse_button_callback.hpp  mouse_callback.hpp  scroll_callback.hpp
include/GLAD/: glad.h
include/TXTR/: stb_image.hpp
include/USER/: camera.hpp  shader.hpp  texture.hpp  vao.hpp  widget.hpp
